# polka-halfsiphash

./: README.md  build_polka.py  pyproject.toml  rest_endpoint.py  run_linear_topology.py
article/: bib.yml  tcc1.typ
mininet/polka-example/: linear_topology.py  run_linear_topology.py
mininet/polka-example/polka/: polka-attacker.json  polka-attacker.p4i  polka-compromised.json  polka-compromised.p4i  polka-core-common.p4  polka-core.json  polka-core.p4  polka-core.p4i  polka-edge.json  polka-edge.p4  polka-edge.p4i  polka.p4h  siphash.p4
mininet/polka-example/polka/config/: e1-commands-overwritten.txt  e10-commands-overwritten.txt
mininet/polka-example/polka_controller/: controller_polka.py
mininet/polka-example/polka_controller/bm_runtime/standard/: Standard.py
mininet/polka-example/tests/: flow_test.py  test_addition.py  test_detour.py  test_integrity.py  test_self.py  test_skiping.py  test_subtraction.py
mininet/polka-example/utils/: call_api.py  check_digest.py  dynamic_check_digest.py  sniff.py
polka/: polka-core-common.p4  polka-edge.p4  siphash.p4
polka_controller/: controller_polka.py
polka_controller/bm_runtime/simple_pre/: SimplePre.py
polka_controller/bm_runtime/simple_pre_lag/: SimplePreLAG.py  ttypes.py
scrapy/: receiver.py  sender.py
script/: calc_digests.py  call_api.py  connect_api.py  polka_nhop.py  scapy.py  siphash.py  siphash_test.py  test.py  tester.py  thrift.py  topo.py
script/bm_runtime/standard/: ttypes.py
