[tool.poetry]
name = "polka-halfsiphash"
version = "0.1.0"
description = ""
authors = ["Henriquelay <37563861+Henriquelay@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mininet = "^2.3.0.dev6"
scapy = "2.4.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
